RESOLVED FIXED308350
[AppKit Gestures] Selection does not show context menu when a secondary click is performed
https://bugs.webkit.org/show_bug.cgi?id=308350
Summary [AppKit Gestures] Selection does not show context menu when a secondary click...
Richard Robinson
Reported 2026-02-20 17:25:19 PST
.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-20 17:25:26 PST
Richard Robinson
Comment 2 2026-02-20 17:28:25 PST
EWS
Comment 3 2026-02-23 16:11:19 PST
Committed 308084@main (ac7381b615e8): <https://commits.webkit.org/308084@main> Reviewed commits have been landed. Closing PR #59132 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.