[AppKit Gestures] Selection does not show context menu when a secondary click is performed https://bugs.webkit.org/show_bug.cgi?id=308350 rdar://170844266

Reviewed by Abrar Rahman Protyasha.

Fix by adopting the updated system delegate interface.

* Source/WebKit/Platform/spi/mac/AppKitSPI.h:

- Remove the forward declaration since it was literally doing nothing and was just a burden to maintain

* Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h:

- Properly annotate the nullability of the WebViewImpl accessor

* Source/WebKit/UIProcess/Cocoa/Foundation+Extras.swift:
(CGPoint.distance(to:)): Deleted.
(CGRect.distance(to:)): Deleted.

- Delete some now-unused functions

* Source/WebKit/UIProcess/mac/WKTextSelectionController.h:
* Source/WebKit/UIProcess/mac/WKTextSelectionController.swift:
(WKTextSelectionController.addTextSelectionManager):
(WKTextSelectionController.selectionDidChange):
(WKTextSelectionController.insertionCursorRect):
(WKTextSelectionController.selectionIsInsertionPoint):
(WKTextSelectionController.isTextSelected(at:)):
(WKTextSelectionController.moveInsertionCursor(to:placeAtWordBoundary:)):
(WKTextSelectionController.showContextMenu(at:)):
(WKTextSelectionController.dragSelection(withGesture:completionHandler:)):
(WKTextSelectionController.beginRangeSelection(at:with:)):
(WKTextSelectionController.continueRangeSelection(at:)):
(WKTextSelectionController.endRangeSelection(at:)):
(WKTextSelectionController.moveInsertionCursor(to:)): Deleted.
(WKTextSelectionController.handleDoubleClick(at:)): Deleted.
(WKTextSelectionController.handleSingleClick(at:)): Deleted.
(WKTextSelectionController.handleClick(at:)): Deleted.
(WKTextSelectionController.handleClick(at:clickCount:)): Deleted.

- Switch to `unowned` from `weak` since the WKWebView will never actually be nil
- Remove some duplicate logic now that the system takes care of it
- Adopt and replace a few delegate methods

Canonical link: https://commits.webkit.org/308084@main