Source/WebKit/Platform/spi/mac/AppKitSPI.h
@@ -224,21 +224,8 @@ typedef void (^NSWindowSnapshotReadinessHandler) (void);
 
 NS_HEADER_AUDIT_BEGIN(nullability, sendability)
 
-@protocol NSTextSelectionManagerDelegateForWebKit_Staging <NSObject>
-
-- (BOOL)isTextSelectedAtPoint:(NSPoint)point;
-- (void)moveInsertionCursorToPoint:(NSPoint)point;
-- (void)handleClickAtPoint:(NSPoint)point clickCount:(NSUInteger)clickCount;
-- (void)showContextMenuAtPoint:(NSPoint)point;
-- (void)dragSelectionWithGesture:(NSGestureRecognizer *)gesture completionHandler:(void(^)(NSDraggingSession*))completionHandler;
-- (void)beginRangeSelectionAtPoint:(NSPoint)point withGranularity:(NSTextSelectionGranularity)granularity;
-- (void)continueRangeSelectionAtPoint:(NSPoint)point;
-- (void)endRangeSelectionAtPoint:(NSPoint)point;
-
-@end
-
 @interface NSTextSelectionManager (WebKit_SPI)
-@property (weak) id <NSTextSelectionManagerDelegateForWebKit_Staging> _webkitDelegate;
+@property (weak) id /* <NSTextSelectionManagerDelegate> */ _webkitDelegate;
 @end
 
 NS_HEADER_AUDIT_END(nullability, sendability)
